--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 30 17:25:35 CST 2016
-sdk.dir=/Users/mao/Library/Android/sdk
+#Mon Jun 06 00:10:40 CST 2016
+sdk.dir=E\:\\Android\\sdk
