--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 06 00:10:40 CST 2016
-sdk.dir=E\:\\Android\\sdk
+#Mon Jun 06 10:56:11 CST 2016
+sdk.dir=D\:\\Android\\sdk
